--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "money-manager",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "dayjs": "^1.11.7",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "sass": "^1.59.2"
-  }
+   "name": "money-manager",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "dayjs": "^1.11.7",
+      "dotenv": "^16.0.3",
+      "eslint": "8.36.0",
+      "eslint-config-next": "13.2.4",
+      "knex": "^2.4.2",
+      "mysql2": "^3.2.0",
+      "next": "13.2.4",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+   },
+   "devDependencies": {
+      "sass": "^1.59.2"
+   }
 }
