Added nextauth authentication for Google, Github and Client Credentials (basic)

--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-PORT=8080
 DB_LOCAL_DBNAME='money_manager'
 DB_LOCAL_USER='root'
 DB_LOCAL_PASSWORD='rootroot'
 CORS_ORIGIN='http://localhost:3000'
+EMAIL_SERVER_USER=apikey
+EMAIL_SERVER_PASSWORD=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
+EMAIL_SERVER_HOST=smtp.sendgrid.net
+EMAIL_SERVER_PORT=587
+EMAIL_FROM=trevorwerner@hotmail.com
+GITHUB_ID=856030b4e6c15fa16138
+GITHUB_SECRET=5cbc760697b052e43678b78436cb84804e3547d9
+GOOGLE_ID=522718738736-19co0u74nossemt2k320h8ttm4ud9vo9.apps.googleusercontent.com
+GOOGLE_SECRET=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
+NEXTAUTH_URL=http://localhost:3000
