--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
       "eslint": "8.36.0",
       "eslint-config-next": "13.2.4",
       "knex": "^2.4.2",
+      "mysql-adapter": "^0.0.7",
       "mysql2": "^3.2.0",
       "next": "13.2.4",
+      "next-auth": "^4.21.1",
+      "nodemailer": "^6.9.1",
       "react": "18.2.0",
       "react-dom": "18.2.0"
    },
