--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "@mui/icons-material": "^5.11.11",
       "@mui/material": "^5.11.15",
       "@mui/x-date-pickers": "^6.0.4",
+      "@prisma/client": "^4.12.0",
       "axios": "^1.3.4",
       "dayjs": "^1.11.7",
       "dotenv": "^16.0.3",
@@ -29,6 +30,7 @@
       "react-dom": "18.2.0"
    },
    "devDependencies": {
+      "prisma": "^4.12.0",
       "sass": "^1.60.0"
    }
 }
