--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "lint": "next lint"
+      "lint": "next lint",
+      "migrate": "prisma migrate dev",
+      "generate": "prisma generate",
+      "seed": "prisma db seed"
    },
    "dependencies": {
       "@emotion/react": "^11.10.6",
@@ -40,7 +43,9 @@
       "seed": "node prisma/seed.js"
    },
    "devDependencies": {
+      "file-loader": "^6.2.0",
       "prisma": "^4.12.0",
+      "raw-loader": "^4.0.2",
       "sass": "^1.60.0"
    }
 }
