--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ GOOGLE_SECRET=<Your Google Secret Key>
 NEXTAUTH_URL=<http://localhost:3000>
 NEXTAUTH_SECRET=<Your secret passcode>
 
-DATABASE_URL=<MySql Database Connection URL>
+DATABASE_URL=mysql://root:rootroot@localhost:<PORT #>/<Database name>
