--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
    "dependencies": {
       "@emotion/react": "^11.10.6",
       "@emotion/styled": "^11.10.6",
+      "@fortawesome/fontawesome-svg-core": "^6.4.0",
+      "@fortawesome/free-regular-svg-icons": "^6.4.0",
+      "@fortawesome/free-solid-svg-icons": "^6.4.0",
+      "@fortawesome/react-fontawesome": "^0.2.0",
       "@mui/icons-material": "^5.11.11",
       "@mui/material": "^5.11.15",
       "@mui/x-date-pickers": "^6.0.4",
@@ -21,6 +25,7 @@
       "@next-auth/typeorm-legacy-adapter": "^2.0.1",
       "@prisma/client": "^4.12.0",
       "axios": "^1.3.4",
+      "babel-plugin-macros": "^3.1.0",
       "bcrypt": "^5.1.0",
       "dayjs": "^1.11.7",
       "dotenv": "^16.0.3",
